--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 1352
+  Left = 1610
   Height = 1172
-  Top = 186
+  Top = 156
   Width = 678
   Caption = 'Form1'
   ClientHeight = 1172
@@ -474,6 +474,7 @@ object Form1: TForm1
     MouseLinkColor.Foreground = clBlue
     LineHighlightColor.Background = clNone
     LineHighlightColor.Foreground = clNone
+    OnPaint = SynEdit1Paint
     inline SynLeftGutterPartList1: TSynGutterPartList
       object SynGutterMarks1: TSynGutterMarks
         Width = 24
