--- a/unit1.lfm
+++ b/unit1.lfm
@@ -23,7 +23,9 @@ object Form1: TForm1
     ParentFont = False
     TabOrder = 0
     OnClick = SynEdit1Click
+    OnMouseDown = SynEdit1MouseDown
     OnMouseMove = SynEdit1MouseMove
+    OnMouseUp = SynEdit1MouseUp
     OnMouseLeave = SynEdit1MouseLeave
     Gutter.Width = 57
     Gutter.MouseActions = <>
